data table limit 500 , teacher active . absence type

--- a/portal/classification/printlist/absence.html
+++ b/portal/classification/printlist/absence.html
@@ -1,5 +1,3 @@
-
-
 <style type="text/css">
 	.cls1{
 		width:22px;
@@ -72,11 +70,11 @@
 </div>
 	<dib class="description">
 		ترتیب دکمه های نوع غیبت عبارت است از:
-		<a class="unjustifiedabsence" style="cursor:pointer;color:black;background-color:white">غیبت غیر موجه</a>،
-		<a class="justifiedabsence" style="cursor:pointer;color:black;background-color:#59c5c5">غیبت موجه</a>،
-		<a class="leave" style="cursor:pointer;color:black;background-color:#baf5ba">مرخصی</a>
+		<a class="unjustifiedabsence" style="color:black;background-color:white">غیبت غیر موجه</a>،
+		<a class="justifiedabsence" style="color:black;background-color:#59c5c5">غیبت موجه</a>،
+		<a class="leave" style="color:black;background-color:#baf5ba">مرخصی</a>
 		و
-		<a class="delay" style="cursor:pointer;color:black;background-color:#ffffc4">تاخیر</a>
+		<a class="delay" style="color:black;background-color:#ffffc4">تاخیر</a>
 		بازدن بر روی هر گزینه رنگ پس زمینه آن خانه به رنگ های اعلام شده در این متن تغییر می کند
 	</dib>
 <table cellspacing="0" cellpadding="0">
@@ -96,11 +94,6 @@
 		<td class="small-font system-default cslc weekdays" xclass="xm8">...شنبه</td>
 		<td class="small-font system-default cslc weekdays" xclass="xm9">...شنبه</td>
 		<td class="small-font system-default cslc weekdays" xclass="xm10">...شنبه</td>
-		<!-- <td class="small-font system-default cslc">...شنبه</td>
-		<td class="small-font system-default cslc">...شنبه</td>
-		<td class="small-font system-default cslc">...شنبه</td>
-		<td class="small-font system-default cslc">...شنبه</td>
-		<td class="small-font system-default cslc">...شنبه</td> -->
 		<td class="small-font system-default clst bridge" rowspan="2"><span >شماره تماس</span></td>
 		<td class="small-font system-default clse" rowspan="2">توضیحات</td>
 	</tr>
@@ -116,11 +109,6 @@
 		<td class="small-font"><input type="text" date="date" style="width:67px;" xclass="xm8"></td>
 		<td class="small-font"><input type="text" date="date" style="width:67px;" xclass="xm9"></td>
 		<td class="small-font"><input type="text" date="date" style="width:67px;" xclass="xm10"></td>
-		<!-- <td class="small-font"><input type="text" date="date" style="width:67px;"></td>
-		<td class="small-font"><input type="text" date="date" style="width:67px;"></td>
-		<td class="small-font"><input type="text" date="date" style="width:67px;"></td>
-		<td class="small-font"><input type="text" date="date" style="width:67px;"></td>
-		<td class="small-font"><input type="text" date="date" style="width:67px;"></td> -->
 	</tr>
 	<!-- end of header -->
 	<!-- record -->
@@ -133,84 +121,45 @@
 			<td class="small-font system-default colory cls4">ثبت غیبت</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm1">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm2">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm3">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm4">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm5">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm6">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm7">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm8">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm9">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
 			<td class="colory cslc" style="width:71px;" style="width:71px;">
 				<a class="insertAbsenceApi icodadd" classificationid="{{list.classificationid}}" style="cursor:pointer;" xclass="xm10">
-					<!-- <img src="static/svg/icons/dadd.svg" style="width:20px"> -->
 				</a>
 			</td>
-			<!-- <td class="colory cslc" style="width:71px;"><button type="submit" id="backPortal">
-					<a href="classification/class/classesid={{classesid}}" class="a-undefault">
-						<img src="static/svg/icons/dadd.svg" style="width:20px">
-					</a>
-				</button>
-			</td>
-			<td class="colory cslc" style="width:71px;"><button type="submit" id="backPortal">
-					<a href="classification/class/classesid={{classesid}}" class="a-undefault">
-						<img src="static/svg/icons/dadd.svg" style="width:20px">
-					</a>
-				</button>
-			</td>
-			<td class="colory cslc" style="width:71px;"><button type="submit" id="backPortal">
-					<a href="classification/class/classesid={{classesid}}" class="a-undefault">
-						<img src="static/svg/icons/dadd.svg" style="width:20px">
-					</a>
-				</button>
-			</td>
-			<td class="colory cslc" style="width:71px;"><button type="submit" id="backPortal">
-					<a href="classification/class/classesid={{classesid}}" class="a-undefault">
-						<img src="static/svg/icons/dadd.svg" style="width:20px">
-					</a>
-				</button>
-			</td>
-			<td class="colory cslc" style="width:71px;"><button type="submit" id="backPortal">
-					<a href="classification/class/classesid={{classesid}}" class="a-undefault">
-						<img src="static/svg/icons/dadd.svg" style="width:20px">
-					</a>
-				</button>
-			</td> -->
+			
 			<td class="normal-font clst bridge"><span >{{list.phone}}</span></td>
 			<td rowspan="2" class="clse">{{list.price}}</td>
 		</tr>
@@ -218,7 +167,7 @@
 			<td class="small-font system-default">نوع غیبت</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio"  classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx1" xclass="xm1" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -228,7 +177,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx2" xclass="xm2" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -238,7 +187,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx3" xclass="xm3" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -248,7 +197,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx4" xclass="xm4" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -258,7 +207,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx5" xclass="xm5" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -268,7 +217,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx6" xclass="xm6" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -278,7 +227,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx7" xclass="xm7" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -288,7 +237,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx8" xclass="xm8" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -298,7 +247,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx9" xclass="xm9" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -308,7 +257,7 @@
 			</td>
 			<td>
 				<div class="divGroup">
-					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="white" value="unjustified absence" xval="unjustifiedabsence" 
+					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="white" checked="checked" value="unjustified absence" xval="unjustifiedabsence" 
 					 title="غیر موجه">
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="#59c5c5" value ="justified absence"
 					xval="justifiedabsence" title="موجه">
@@ -316,11 +265,6 @@
 					<input type="radio" classificationid="{{list.classificationid}}" name="absencetype{{list.username}}mx10" xclass="xm10" xcolor="#ffffc4" value= "delay" xval="delay" title="تاخیر">		
 				</div>
 			</td>
-			<!-- <td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td> -->
 			<td class="normal-font bridge"><span>{{list.mobile}}</span></td>
 		</tr>
 	</tbody>
@@ -329,32 +273,33 @@
 <script type="text/javascript">
 $(document).ready(function(){
 	
-	$("a.unjustifiedabsence").click(function(){
-		$(".divGroup").each(function(){
-			$("input:radio", this).removeAttr("checked");
-			$("input:radio", this).eq(0).attr("checked", "checked");
-		});
-	});
+	// $("a.unjustifiedabsence").click(function(){
+	// 	$(".divGroup").each(function(){
+	// 		$("input:radio", this).removeAttr("checked");
+
+	// 		$("input:radio", this).eq(0).attr("checked", "checked");
+	// 	});
+	// });
 	
-	$("a.justifiedabsence").click(function(){
-		$(".divGroup").each(function(){
-			$("input:radio", this).removeAttr("checked");
-			$("input:radio", this).eq(1).attr("checked", "checked");
-		});
-	});
+	// $("a.justifiedabsence").click(function(){
+	// 	$(".divGroup").each(function(){
+	// 		$("input:radio", this).removeAttr("checked");
+	// 		$("input:radio", this).eq(1).attr("checked", "checked");
+	// 	});
+	// });
 	
-	$("a.leave").click(function(){
-		$(".divGroup").each(function(){
-			$("input:radio", this).removeAttr("checked");
-			$("input:radio", this).eq(2).attr("checked", "checked");
-		});
-	});
-	$("a.delay").click(function(){
-		$(".divGroup").each(function(){
-			$("input:radio", this).removeAttr("checked");
-			$("input:radio", this).eq(3).attr("checked", "checked");
-		});
-	});
+	// $("a.leave").click(function(){
+	// 	$(".divGroup").each(function(){
+	// 		$("input:radio", this).removeAttr("checked");
+	// 		$("input:radio", this).eq(2).attr("checked", "checked");
+	// 	});
+	// });
+	// $("a.delay").click(function(){
+	// 	$(".divGroup").each(function(){
+	// 		$("input:radio", this).removeAttr("checked");
+	// 		$("input:radio", this).eq(3).attr("checked", "checked");
+	// 	});
+	// });
 	
 	$("input[type=radio]").click(function(){
 		// $(this).cl
