--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -28,11 +28,13 @@
 
 	{%block head%}
 	
-	<!-- jQuery UI CSS -->
-	<!-- <script type="text/javascript" src="static/js/jquery.min.js"></script> -->
-	<script type="text/javascript" src="static/js/jquery-3.1.0.min.js"></script>
+	<!-- jQuery -->
+	<script type="text/javascript" src="static/js/jquery.min.js"></script>
+	<!-- <script type="text/javascript" src="static/js/jquery-3.1.0.min.js"></script> -->
 	
 	<style type="text/css">#perload-blockoff{position: fixed;top: 0;left: 0;width: 100%;height: 100%;background: white;z-index: 9999999;padding-top: 10%;overflow: hidden;}#perload-blockoff embed{left: 50%;display: block;position: absolute;padding-top: 10%;top: 0}</style><script type="text/javascript">$('<div id="perload-blockoff"><embed src="static/svg/logo-animation.svg" class="perload-svg" height="150" type="image/svg+xml" /></div>').appendTo($("html"));</script>
+	
+	<!-- jQuery UI CSS -->
 	<link rel="stylesheet" href="static/jquery-ui/jquery-ui.css">
 	<link rel="stylesheet" href="static/Jcrop/css/jquery.Jcrop.min.css" type="text/css" />
 
@@ -40,10 +42,9 @@
 	<link rel="stylesheet" type="text/css" href="{{"static/css/admin.css"|fcache}}">
 	<link type="text/css" rel="stylesheet" href="static/persianDatepicker/css/persianDatepicker-default.css" />
 
-	<!-- jQuery -->
-	<script type="text/javascript" src="static/js/jquery.min.js"></script>
-	<script type="text/javascript" src="static/Jcrop/js/jquery.Jcrop.min.js"></script>
+	
 	<!-- jQuery UI JS -->
+	<script type="text/javascript" src="static/Jcrop/js/jquery.Jcrop.min.js"></script>
 	<script type="text/javascript" src="static/jquery-ui/jquery-ui.min.js"></script>
 	<!-- Custom JS -->
 	<script type="text/javascript" src="static/persianDatepicker/js/persianDatepicker.js"></script>
