hefz lig bug fix

--- a/portal/race/online/display.html
+++ b/portal/race/online/display.html
@@ -79,6 +79,7 @@
 		    });
 		});
 		setTimeout(function(){location.reload()},5000);
+		// setTimeout(function(){show_chart()},5000);
 	}
 	show_chart();
 
