--- a/portal/classification/progress/display.html
+++ b/portal/classification/progress/display.html
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 $(document).ready(function(){
 	
-	show_chart();
+	show_chart('column');
 	
 });
 function show_chart(type = '')
@@ -30,7 +30,13 @@ function show_chart(type = '')
 </script>
 <!-- classes detail -->
 <div class="class-detail">
-	{{ tagMaker.list(list) }}
+<center>
+	<h5>
+		{{classes_detail}}
+		
+	</h5>
+		
+</center>
 </div>
 <div class="chart-type">
 	<a onclick="show_chart()">نمودار خطی</a>
@@ -49,6 +55,13 @@ function show_chart(type = '')
 		padding: 5px;
 		border: 1px solid #eee;
 		background-color: #eee;
+	}
+	*
+	{
+		font-family: "WYekan";
+	}
+	g{
+		direction: ltr;
 	}
 </style>
 {%endblock%}
