--- a/portal/users/learn/progress/display.html
+++ b/portal/users/learn/progress/display.html
@@ -7,8 +7,17 @@
 <script src="/portal/static/js/bootstrap-checkbox.js" defer></script>
 <script type="text/javascript">
 $(document).ready(function(){
+	
+	show_chart();
+	
+});
+function show_chart(type = '')
+{
 	$('#chart').highcharts({
-	    title: {text: "وضعیت تحصیلی فراگیر"}, subtitle : {text : "به تفکیک روز"},xAxis:{
+		chart:{
+			type : type
+		},
+	    title: {text: "وضعیت تحصیلی فراگیر {{users_datail}}"}, subtitle : {text : "به تفکیک روز"},xAxis:{
 	    	categories : {{chart.categories|raw}}
 	    },
 	    yAxis:{title: {text : "نمره"},
@@ -17,21 +26,31 @@ $(document).ready(function(){
 	});	
 
 	$('#month-chart').highcharts({
-	    title: {text: "وضعیت تحصیلی فراگیر"}, subtitle : {text : "به تفکیک ماه"},xAxis:{
+		chart:{
+			type : type
+		},
+	    title: {text: "وضعیت تحصیلی فراگیر {{users_datail}} "}, subtitle : {text : "به تفکیک ماه"},xAxis:{
 	    	categories : {{chart_month.categories|raw}}
 	    },
 	    yAxis:{title: {text : "نمره"},
 	    	potLine :[{value:0,width: 1}]},
 	    series: {{chart_month.series|raw}}
-	});	
-});
-
+	});		
+}
 
 	
 </script>
 <!-- classes detail -->
+<!-- classes detail -->
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
+</div>
+<br>
+
+<div class="chart-type">
+	<a onclick="show_chart()">نمودار خطی</a>
+	<a onclick="show_chart('column')">نمودار میله ای</a>
+	<a onclick="show_chart('area')">نمودار منطقه ای</a>
 </div>
 
 <!-- <dir style="font-family:'WYekan'">نمایش بر خط نتایج مسابقه</dir> -->
@@ -41,5 +60,19 @@ $(document).ready(function(){
 <hr>
 	<div id="month-chart" class="x-chart"></div>
 </dir>
-
+<style type="text/css">
+	div.chart-type a{
+		cursor: pointer;
+		padding: 5px;
+		border: 1px solid #eee;
+		background-color: #eee;
+		border-radius: 3px;
+	}
+	* {
+		font-family: "WYekan";
+	}
+	g{
+		direction: ltr;
+	}
+</style>
 {%endblock%}
