--- a/portal/group/progress/display.html
+++ b/portal/group/progress/display.html
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 $(document).ready(function(){
 	
-	show_chart();
+	show_chart("column");
 	
 });
 function show_chart(type = '')
@@ -18,7 +18,7 @@ function show_chart(type = '')
 			type : type
 		},
 	    title: {text: "نمودار معدل نمرات کلاس های گروه علمی {{plan_detail}}"}, subtitle : {text : "به تفکیک استاد"},xAxis:{
-	    	categories : {{chart.categories|raw}}
+	    	categories : ''
 	    },
 	    yAxis:{title: {text : "نمره"},
 	    	potLine :[{value:0,width: 1}]},
@@ -32,11 +32,7 @@ function show_chart(type = '')
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
 </div>
-<div class="chart-type">
-	<a onclick="show_chart()">نمودار خطی</a>
-	<a onclick="show_chart('column')">نمودار میله ای</a>
-	<a onclick="show_chart('area')">نمودار منطقه ای</a>
-</div>
+
 <!-- <dir style="font-family:'WYekan'">نمایش بر خط نتایج مسابقه</dir> -->
 <dir id="title">
 
