show absece by classe id

--- a/portal/users/learn/absence/display.html
+++ b/portal/users/learn/absence/display.html
@@ -3,4 +3,5 @@
 {%block content%}
 <p>{{global.users_datail}}</p>
 {{dtable.make(dataTable)}}
+<i>برای نمایش تمامی غیبت های فراگیر در همه کلاس های شرکت کرده <a href="{{all_absence_link}}" style="color:blue">کلیک کنید</a></i>
 {%endblock%}
