report classes add

--- a/portal/certification/list/display.html
+++ b/portal/certification/list/display.html
@@ -12,10 +12,10 @@
 
 	}
 </style>
-<a >دریافت فایل</a>
-<a id="report-certification" href="certification/report/type=all/xlsx=1" class="a-undefault" target="_blank">همه گواهی نامه ها</a>
-<a id="report-certification" href="certification/report/type=request/xlsx=1" class="a-undefault" target="_blank">صادر نشده</a>
-<a id="report-certification" href="certification/report/type=print/xlsx=1" class="a-undefault" target="_blank">چاپ نشده</a>
-<a id="report-certification" href="certification/report/type=deliver/xlsx=1" class="a-undefault" target="_blank">تحویل داده نشده</a>
+<a >نمایش لیست</a>
+<a id="report-certification" href="certification/report/type=all/" class="a-undefault" target="_blank">همه گواهی نامه ها</a>
+<a id="report-certification" href="certification/report/type=request/" class="a-undefault" target="_blank">صادر نشده</a>
+<a id="report-certification" href="certification/report/type=print/" class="a-undefault" target="_blank">چاپ نشده</a>
+<a id="report-certification" href="certification/report/type=deliver/" class="a-undefault" target="_blank">تحویل داده نشده</a>
 {{dtable.make(dataTable)}}
 {%endblock%}
