--- a/portal/report/plan/progress/display.html
+++ b/portal/report/plan/progress/display.html
@@ -7,9 +7,9 @@
 <script src="/portal/static/js/bootstrap-checkbox.js" defer></script>
 <script type="text/javascript">
 $(document).ready(function(){
-	
+
 	show_chart();
-	
+
 });
 function show_chart(type = '')
 {
@@ -18,20 +18,28 @@ function show_chart(type = '')
 			type : type
 		},
 	    title: {text: "نمودار معدل نمرات کلاس های طرح {{plan_detail}}"}, subtitle : {text : "به تفکیک استاد"},xAxis:{
-	    	categories : {{chart.categories|raw}}
+	    	categories : eval({{chart.categories|raw}})
 	    },
 	    yAxis:{title: {text : "نمره"},
 	    	potLine :[{value:0,width: 1}]},
-	    series: {{chart.series|raw}}
-	});	
+	    series: eval({{chart.series|raw}})
+	});
+	$('#absence').highcharts({
+		chart:{
+			type : type
+		},
+	    title: {text: "نمودار بیشترین غیبت فراگیران در طرح {{plan_detail}}"}, subtitle : {text : "به تفکیک فراگیر"},xAxis:{
+	    	categories : eval({{absence.categories|raw}})
+	    },
+	    yAxis:{title: {text : "نمره"},
+	    	potLine :[{value:0,width: 1}]},
+	    series: eval({{absence.series|raw}})
+	});
 }
 
-	
+
 </script>
 <!-- classes detail -->
-<div class="class-detail">
-	{{ tagMaker.list(list) }}
-</div>
 <div class="chart-type">
 	<a onclick="show_chart()">نمودار خطی</a>
 	<a onclick="show_chart('column')">نمودار میله ای</a>
@@ -41,8 +49,16 @@ function show_chart(type = '')
 <dir id="title">
 
 	<div id="chart" class="x-chart"></div>
-	
+	<hr>
+	<div id="absence" class="x-chart"></div>
+
 </dir>
+<hr>
+<h2>لیست حذف شده ها از کلاس به دلیل غیبت</h2>
+
+<div class="class-detail">
+	{{ tagMaker.list(list) }}
+</div>
 <style type="text/css">
 	div.chart-type a{
 		cursor: pointer;
